maib MIA QR API docs

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,4 +21,4 @@ license.text = "GPL-3.0-or-later"
 Homepage = "https://github.com/alexminza/maib-mia-sdk-python"
 Issues = "https://github.com/alexminza/maib-mia-sdk-python/issues"
 Repository = "https://github.com/alexminza/maib-mia-sdk-python"
-#Documentation = "https://docs.maibmerchants.md"
+Documentation = "https://docs.maibmerchants.md/mia-qr-api"
