--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,7 @@ authors = [{ name = "Alexander Minza" }]
 description = "Python SDK for maib MIA API"
 readme = "README.md"
 requires-python = ">=3.9"
-dependencies = ["requests"]
+dependencies = ["httpx"]
 keywords = [
   "maib",
   "moldova",
